--- a/src/user/register.html
+++ b/src/user/register.html
@@ -3,10 +3,104 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register to Bid</title>
+    <title>Sign Up to Bid</title>
+    <link
+      href="
+https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
+"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../../dist/css/style.css" />
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/"
+          ><img src="../../img/logo.png" alt="Bid logo" id="logo"
+        /></a>
+
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="menu"></ul>
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+              id="search"
+            />
+            <button
+              class="btn btn-outline-success"
+              type="submit"
+              id="search-btn"
+            >
+              Search
+            </button>
+          </form>
+          <button class="btn btn-main">Sign In</button>
+          <button class="btn">Sign Up</button>
+        </div>
+      </div>
+    </nav>
+    <main>
+      <div class="container mt-3 box shadow">
+        <div class="row justify-content-center">
+          <h1 class="text-center">Sign Up</h1>
+          <div id="message"></div>
+          <div class="col-12 col-md-6">
+            <form id="registerForm">
+              <div class="form-group mb-3">
+                <label for="name">Name:</label>
+                <input
+                  class="form-control"
+                  type="text"
+                  name="name"
+                  required
+                  pattern="^[\w]+$"
+                  title="Username must only contain lowercase and uppercase letters, numbers & underscore. Example: Good_Username123 "
+                  id="name"
+                />
+              </div>
+              <div class="form-group mb-3">
+                <label for="email">Email:</label>
+                <input
+                  class="form-control"
+                  id="email"
+                  type="email"
+                  name="email"
+                  required
+                  pattern="^[\w\-.]+@(stud\.)?noroff\.no$"
+                  title="Only @(stud.)noroff.no are allowed to register."
+                />
+              </div>
+              <div class="form-group mb-3">
+                <label for="password">Password:</label>
+                <input
+                  id="password"
+                  class="form-control"
+                  type="password"
+                  name="password"
+                  required
+                  minlength="8"
+                />
+              </div>
+              <button class="btn btn-main btn-submit">Sign up</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.js"></script>
   </body>
 </html>
