done registration html

--- a/src/user/login.html
+++ b/src/user/login.html
@@ -59,7 +59,7 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
           <div class="col-12 col-md-6">
             <form id="registerForm">
               <div class="form-group mb-3">
-                <label for="name">Name *</label>
+                <label for="name">Name:</label>
                 <input
                   class="form-control"
                   type="text"
@@ -69,11 +69,10 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
                   title="Username must only contain lowercase and uppercase letters, numbers & underscore. Example: Good_Username123 "
                   id="name"
                   autocomplete="username"
-                  placeholder="Name"
                 />
               </div>
               <div class="form-group mb-3">
-                <label for="email">Email *</label>
+                <label for="email">Email:</label>
                 <input
                   class="form-control"
                   id="email"
@@ -83,11 +82,10 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
                   pattern="^[\w\-.]+@(stud\.)?noroff\.no$"
                   title="Only @(stud.)noroff.no are allowed to register."
                   autocomplete="email"
-                  placeholder="Email"
                 />
               </div>
               <div class="form-group mb-3">
-                <label for="password">Password *</label>
+                <label for="password">Password:</label>
                 <input
                   id="password"
                   class="form-control"
@@ -95,17 +93,6 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
                   name="password"
                   required
                   minlength="8"
-                  placeholder="Password"
-                />
-              </div>
-              <div class="form-group mb-3">
-                <label for="password">Avatar</label>
-                <input
-                  id="avatar"
-                  class="form-control"
-                  type="url"
-                  name="avatar"
-                  placeholder="URL to avatar"
                 />
               </div>
               <button class="btn btn-main btn-submit">Sign up</button>
