--- a/profile/register.html
+++ b/profile/register.html
@@ -99,7 +99,7 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
                 />
               </div>
               <div class="form-group mb-3">
-                <label for="password">Avatar</label>
+                <label for="avatar">Avatar</label>
                 <input
                   id="avatar"
                   class="form-control"
