--- a/index.html
+++ b/index.html
@@ -51,7 +51,81 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
         </div>
       </div>
     </nav>
-    <main></main>
+    <main>
+      <div id="profile">
+        <h1 class="text-center">Listings</h1>
+        <div class="container mt-3 box shadow">
+          <div class="row">
+            <div class="col-12 col-sm-6 col-lg-4 text-center">
+              <h2>Retro Car</h2>
+
+              <img
+                src="./img/avatar.jpeg"
+                alt="Image of a listing"
+                width="100%"
+              />
+              <p>Some text about the listing, like a short description</p>
+              <p>Ends in: 2 day(s)</p>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4 text-center">
+              <h2>Retro Car</h2>
+
+              <img
+                src="./img/avatar.jpeg"
+                alt="Image of a listing"
+                width="100%"
+              />
+              <p>Some text about the listing, like a short description</p>
+              <p>Ends in: 2 day(s)</p>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4 text-center">
+              <h2>Retro Car</h2>
+
+              <img
+                src="./img/avatar.jpeg"
+                alt="Image of a listing"
+                width="100%"
+              />
+              <p>Some text about the listing, like a short description</p>
+              <p>Ends in: 2 day(s)</p>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4 text-center">
+              <h2>Retro Car</h2>
+
+              <img
+                src="./img/avatar.jpeg"
+                alt="Image of a listing"
+                width="100%"
+              />
+              <p>Some text about the listing, like a short description</p>
+              <p>Ends in: 2 day(s)</p>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4 text-center">
+              <h2>Retro Car</h2>
+
+              <img
+                src="./img/avatar.jpeg"
+                alt="Image of a listing"
+                width="100%"
+              />
+              <p>Some text about the listing, like a short description</p>
+              <p>Ends in: 2 day(s)</p>
+            </div>
+            <div class="col-12 col-sm-6 col-lg-4 text-center">
+              <h2>Retro Car</h2>
+
+              <img
+                src="./img/avatar.jpeg"
+                alt="Image of a listing"
+                width="100%"
+              />
+              <p>Some text about the listing, like a short description</p>
+              <p>Ends in: 2 day(s)</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <script type="module" src="../js/index.js"></script>
   </body>
