--- a/index.html
+++ b/index.html
@@ -54,73 +54,39 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
     <main>
       <div id="profile">
         <h1 class="text-center">Listings</h1>
-        <div class="container mt-3 box shadow">
-          <div class="row">
-            <div class="col-12 col-sm-6 col-lg-4 text-center">
-              <h2>Retro Car</h2>
-
-              <img
-                src="./img/avatar.jpeg"
-                alt="Image of a listing"
-                width="100%"
-              />
-              <p>Some text about the listing, like a short description</p>
-              <p>Ends in: 2 day(s)</p>
+        <div class="row">
+          <div class="col-12 col-sm-6 col-lg-4 py-2">
+            <div class="card h-100 card-body">
+              Card. I'm just a simple card-block, but I have a little more text!
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 text-center">
-              <h2>Retro Car</h2>
-
-              <img
-                src="./img/avatar.jpeg"
-                alt="Image of a listing"
-                width="100%"
-              />
-              <p>Some text about the listing, like a short description</p>
-              <p>Ends in: 2 day(s)</p>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-4 py-2">
+            <div class="card h-100 border-primary">
+              <div class="card-body">
+                <h3 class="card-title">Primary</h3>
+                <p class="card-text">
+                  With supporting text below as a natural lead-in to additional
+                  content.
+                </p>
+                <a href="#" class="btn btn-outline-secondary">Outline</a>
+              </div>
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 text-center">
-              <h2>Retro Car</h2>
-
-              <img
-                src="./img/avatar.jpeg"
-                alt="Image of a listing"
-                width="100%"
-              />
-              <p>Some text about the listing, like a short description</p>
-              <p>Ends in: 2 day(s)</p>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-4 py-2">
+            <div class="card h-100 card-body">
+              Card. I'm just a simple card-block.
             </div>
-            <div class="col-12 col-sm-6 col-lg-4 text-center">
-              <h2>Retro Car</h2>
-
-              <img
-                src="./img/avatar.jpeg"
-                alt="Image of a listing"
-                width="100%"
-              />
-              <p>Some text about the listing, like a short description</p>
-              <p>Ends in: 2 day(s)</p>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4 text-center">
-              <h2>Retro Car</h2>
-
-              <img
-                src="./img/avatar.jpeg"
-                alt="Image of a listing"
-                width="100%"
-              />
-              <p>Some text about the listing, like a short description</p>
-              <p>Ends in: 2 day(s)</p>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4 text-center">
-              <h2>Retro Car</h2>
-
-              <img
-                src="./img/avatar.jpeg"
-                alt="Image of a listing"
-                width="100%"
-              />
-              <p>Some text about the listing, like a short description</p>
-              <p>Ends in: 2 day(s)</p>
+          </div>
+          <div class="col-12 col-sm-6 col-lg-4 py-2">
+            <div class="card text-white bg-primary">
+              <div class="card-body">
+                <h3 class="card-title">Hello</h3>
+                <p class="card-text">
+                  With supporting text below as a natural lead-in to additional
+                  content.
+                </p>
+                <a href="#" class="btn btn-outline-light">Outline</a>
+              </div>
             </div>
           </div>
         </div>
