html for listings

--- a/index.html
+++ b/index.html
@@ -52,44 +52,9 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
       </div>
     </nav>
     <main>
-      <div id="profile">
+      <div>
         <h1 class="text-center">Listings</h1>
-        <div class="row">
-          <div class="col-12 col-sm-6 col-lg-4 py-2">
-            <div class="card h-100 card-body">
-              Card. I'm just a simple card-block, but I have a little more text!
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-4 py-2">
-            <div class="card h-100 border-primary">
-              <div class="card-body">
-                <h3 class="card-title">Primary</h3>
-                <p class="card-text">
-                  With supporting text below as a natural lead-in to additional
-                  content.
-                </p>
-                <a href="#" class="btn btn-outline-secondary">Outline</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-4 py-2">
-            <div class="card h-100 card-body">
-              Card. I'm just a simple card-block.
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-lg-4 py-2">
-            <div class="card text-white bg-primary">
-              <div class="card-body">
-                <h3 class="card-title">Hello</h3>
-                <p class="card-text">
-                  With supporting text below as a natural lead-in to additional
-                  content.
-                </p>
-                <a href="#" class="btn btn-outline-light">Outline</a>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="row" id="listingsContainer"></div>
       </div>
     </main>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
