refactored auctions feed

--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
     </nav>
     <main>
       <div>
+        <div id="message"></div>
         <h1 class="text-center">Listings</h1>
         <div class="row" id="listingsContainer"></div>
+
+        <button id="loadMore" class="btn btn-main">Load more...</button>
       </div>
     </main>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
