--- a/listings/details.html
+++ b/listings/details.html
@@ -10,7 +10,7 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
 "
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/css/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
