--- a/listings/details.html
+++ b/listings/details.html
@@ -53,7 +53,7 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
     </nav>
     <main>
       <div>
-        <h1 class="text-center">Listings</h1>
+        <h1 class="text-center" id="listingTitle">Listings</h1>
         <div class="row" id="detailsContainer"></div>
       </div>
     </main>
