add listing func

--- a/listings/add.html
+++ b/listings/add.html
@@ -57,7 +57,7 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
           <h1 class="text-center">Add Listing</h1>
           <div id="message"></div>
           <div class="col-12 col-md-6">
-            <form id="registerForm">
+            <form id="addListing">
               <div class="form-group mb-3">
                 <label for="title">Title *</label>
                 <input
