fixed error with register function

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -51,7 +51,8 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
         </div>
       </div>
     </nav>
-    <main>
+    <section><div id="searchResults" class="search-results"></div></section>
+    <main id="main-container">
       <div id="profile">
         <div class="container mt-3 box shadow">
           <div class="row justify-content-center">
