--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
         </div>
       </div>
     </nav>
-    <main>
+    <section><div id="searchResults" class="search-results"></div></section>
+    <main id="main-container">
       <div>
         <div id="message"></div>
         <h1 class="text-center">Listings</h1>
-        <div id="searchResults" class="search-results"></div>
+
         <div class="row" id="listingsContainer"></div>
 
         <button id="loadMore" class="btn btn-main">Load more...</button>
