--- a/listings/index.html
+++ b/listings/index.html
@@ -51,7 +51,8 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
         </div>
       </div>
     </nav>
-    <main>
+    <section><div id="searchResults" class="search-results"></div></section>
+    <main id="main-container">
       <div>
         <h1 class="text-center">Listings</h1>
         <div class="row" id="listingsContainer"></div>
