fixed bug with addItem

--- a/listings/add.html
+++ b/listings/add.html
@@ -81,7 +81,7 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
                 />
               </div>
               <div class="form-group mb-3">
-                <label for="ends">Ends at</label>
+                <label for="ends">Ends at *</label>
                 <input
                   class="form-control"
                   id="ends"
