--- a/listings/index.html
+++ b/listings/index.html
@@ -58,7 +58,7 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
         <div class="row" id="listingsContainer"></div>
       </div>
     </main>
-    <script src="/node_modules/bootstrap//dist/js/bootstrap.js"></script>
+    <script src="/node_modules/bootstrap//dist/js/bootstrap.min.js"></script>
     <script type="module" src="js/index.js"></script>
   </body>
 </html>
