--- a/listings/index.html
+++ b/listings/index.html
@@ -10,7 +10,7 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
 "
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../../css/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
@@ -58,7 +58,7 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
         <div class="row" id="listingsContainer"></div>
       </div>
     </main>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script type="module" src="js/index.js"></script>
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script type="module" src="../../js/index.js"></script>
   </body>
 </html>
