--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,13 +10,13 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
 "
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="/"
-          ><img src="../../img/logo.png" alt="Bid logo" id="logo"
+          ><img src="/img/logo.png" alt="Bid logo" id="logo"
         /></a>
 
         <button
@@ -62,7 +62,7 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
         <button id="loadMore" class="btn btn-main">Load more...</button>
       </div>
     </main>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
-    <script type="module" src="../js/index.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script type="module" src="/js/index.js"></script>
   </body>
 </html>
