--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
         <button id="loadMore" class="btn btn-main">Load more...</button>
       </div>
     </main>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="/js/index.js"></script>
   </body>
 </html>
