--- a/profile/profile.html
+++ b/profile/profile.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -77,7 +77,11 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
         </div>
       </div>
     </main>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="../js/index.js"></script>
   </body>
 </html>
