--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@ https://cdn.jsdelivr.net/npm/futura-font@1.0.0/styles.min.css
       integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
       crossorigin="anonymous"
     ></script> -->
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+      type="module"
+    ></script>
     <script type="module" src="/js/index.js"></script>
   </body>
 </html>
